--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nothingfinance",
   "version": "1.1.1",
   "private": false,
-  "homepage": "https://thesimonsnape.github.io/nothingfinance",
+  "homepage": "https://thesimonsnape.github.io/nothing-finance",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
